@@ -1,5 +1,7 @@
 Changes for 1.6.7
 
+ - [ZBX-915] fixed pgsql cycling on transaction failure (Artem)
+ - [ZBX-985] fixed pgsql return value (Artem)
  - [ZBX-1035] fixed possibility to import graphs to host we dont have permissions (Vedmak)
  - [ZBX-1062] deny creation of log and eventlog items with non log type of information (Vedmak)
  - [DEV-137] fix incorrect key syntax error message (Richlv)
